# nektar-simple-sol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.sh  run.sh
docs/: eqns.md
plots/: 1D_profs.py  2D_images.py  2D_slices.py  animate_profs.py  make_env.sh  report_figs.py  requirements.txt  update_report_figs.sh
plots/data/: analytic_sigma2.csv
plots/utils/: __init__.py  locations.py  plotting.py  srcs.py
runs/templates/1DSOL/: 1DSOL.xml  cmd_line.txt
runs/templates/2DSOL/: 2DSOL.xml  cmd_line.txt
src/: CFSBndCond.cpp  CFSBndCond.h  CompressibleSolver.h  ExactSolverToro.cpp  ExactSolverToro.h  RiemannInvariantBC.cpp  SOLSolver.cpp  SOLSystem.cpp  SOLSystem.h  SourceTerms.cpp  SourceTerms.h  VariableConverter.cpp
